chore: update pom.xml